--- a/resources-centos.yaml
+++ b/resources-centos.yaml
@@ -2,4 +2,5 @@ resource_registry:
   "Evoila::Deployment::CopyFile": src/deploy-copy-file.yaml
   "Evoila::Deployment::HostsFile": src/deploy-hosts-file.yaml
   "Evoila::Deployment::PrepareVolume": src/deploy-prepare-volume.yaml
+  "Evoila::Deployment::GenerateHtpasswd": src/deploy-generate-htpasswd-centos.yaml
   "Evoila::Deployment::Java": src/deploy-java-centos.yaml
