Feature: Activate Secondary NICs (Ubuntu only)
Write configuration to /etc/network/interfaces.d for all NICs other than
the secondary

--- a/resources-ubuntu.yaml
+++ b/resources-ubuntu.yaml
@@ -4,3 +4,4 @@ resource_registry:
   "Evoila::Deployment::PrepareVolume": src/deploy-prepare-volume.yaml
   "Evoila::Deployment::GenerateHtpasswd": src/deploy-generate-htpasswd-ubuntu.yaml
   "Evoila::Deployment::Java": src/deploy-java-ubuntu.yaml
+  "Evoila::Deployment::ActivateNICs": src/deploy-activate-nics.yaml
