--- a/src/deploy-copy-file.yaml
+++ b/src/deploy-copy-file.yaml
@@ -21,10 +21,19 @@ parameters:
     description: "Exceptions to proxy configuration"
     default: ''
 
-  directory:
+  base_dir:
     type: string
  
   filename:
+    type: string
+
+  owner:
+    type: string
+
+  group:
+    type: string
+
+  perms:
     type: string
 
   content:
@@ -38,8 +47,11 @@ resources:
       group: script
       config: { get_file: scripts/copy-file.sh }
       inputs:
-        - name: TARGET_DIRECTORY
-        - name: TARGET_FILENAME
+        - name: BASE_DIR
+        - name: FILENAME
+        - name: OWNER
+        - name: GROUP
+        - name: PERMS
         - name: CONTENT
 
   deploy_copy_file:
@@ -52,8 +64,11 @@ resources:
         http_proxy: { get_param: http_proxy }
         https_proxy: { get_param: https_proxy }
         no_proxy: { get_param: no_proxy }
-        TARGET_DIRECTORY: { get_param: directory }
-        TARGET_FILENAME: { get_param: filename }
+        BASE_DIR: { get_param: base_dir }
+        FILENAME: { get_param: filename }
+        OWNER: { get_param: owner }
+        GROUP: { get_param: group }
+        PERMS: { get_param: perms }
         CONTENT: { get_param: content }
 
 outputs:
