--- a/resources-centos.yaml
+++ b/resources-centos.yaml
@@ -4,3 +4,4 @@ resource_registry:
   "Evoila::Deployment::PrepareVolume": src/deploy-prepare-volume.yaml
   "Evoila::Deployment::GenerateHtpasswd": src/deploy-generate-htpasswd-centos.yaml
   "Evoila::Deployment::Java": src/deploy-java-centos.yaml
+  "Evoila::Config::OsCollectConfig": src/config-os-collect-config-centos.yaml
