--- a/resources-centos.yaml
+++ b/resources-centos.yaml
@@ -5,3 +5,4 @@ resource_registry:
   "Evoila::Deployment::GenerateHtpasswd": src/deploy-generate-htpasswd-centos.yaml
   "Evoila::Deployment::Java": src/deploy-java-centos.yaml
   "Evoila::Config::OsCollectConfig": src/config-os-collect-config-centos.yaml
+  "Evoila::Deployment::Java::Keystore::Add": src/deploy-keystore-add-centos.yaml
