--- a/resources-ubuntu.yaml
+++ b/resources-ubuntu.yaml
@@ -5,3 +5,4 @@ resource_registry:
   "Evoila::Deployment::GenerateHtpasswd": src/deploy-generate-htpasswd-ubuntu.yaml
   "Evoila::Deployment::Java": src/deploy-java-ubuntu.yaml
   "Evoila::Deployment::ActivateNICs": src/deploy-activate-nics.yaml
+  "Evoila::Deployment::Java::Keystore::Add": src/deploy-keystore-add-ubuntu.yaml
