--- a/src/deploy-keystore-add-centos.yaml
+++ b/src/deploy-keystore-add-centos.yaml
@@ -21,29 +21,39 @@ parameters:
     description: "Exceptions to proxy configuration"
     default: ''
 
+  store_pass:
+    type: string
+    default: changeit
+    hidden: true
+
+  certificate:
+    type: string
+
 resources:
 
-  install_java:
+  keystore_add:
     type: OS::Heat::SoftwareConfig
     properties:
       group: script
-      config: { get_file: scripts/ubuntu/install-java.sh }
+      config: { get_file: scripts/centos/java-keystore-add.sh }
       inputs:
         - name: http_proxy
         - name: https_proxy
         - name: no_proxy
+        - name: STORE_PASS
+        - name: CERTIFICATE
 
-  deploy_install_java:
+  deploy_keystore_add:
     type: OS::Heat::SoftwareDeploymentGroup
     properties:
-      config: { get_resource: install_java }
+      config: { get_resource: keystore_add }
       servers: { get_param: server_map }
       signal_transport: HEAT_SIGNAL
       input_values:
         http_proxy: { get_param: http_proxy }
         https_proxy: { get_param: https_proxy }
         no_proxy: { get_param: no_proxy }
-    depends_on:
-      - install_java
+        STORE_PASS: { get_param: store_pass }
+        CERTIFICATE: { get_param: certificate }
 
 outputs:
