--- a/src/deploy-keystore-add-centos.yaml
+++ b/src/deploy-keystore-add-centos.yaml
@@ -29,6 +29,9 @@ parameters:
   certificate:
     type: string
 
+  alias:
+    type: string
+
 resources:
 
   keystore_add:
@@ -42,6 +45,7 @@ resources:
         - name: no_proxy
         - name: STORE_PASS
         - name: CERTIFICATE
+        - name: ALIAS
 
   deploy_keystore_add:
     type: OS::Heat::SoftwareDeploymentGroup
@@ -55,5 +59,6 @@ resources:
         no_proxy: { get_param: no_proxy }
         STORE_PASS: { get_param: store_pass }
         CERTIFICATE: { get_param: certificate }
+        ALIAS: { get_param: alias }
 
 outputs:
