--- a/src/deploy-prepare-volume.yaml
+++ b/src/deploy-prepare-volume.yaml
@@ -24,7 +24,7 @@ parameters:
   device:
     type: string
     description: "The name of the block device"
-    default: "vdb"
+    default: "/dev/vdb"
 
   mountpoint:
     type: string
